--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Statistics Table</title>
+    <title>Statistics Table</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       rel="stylesheet"
@@ -29,10 +29,17 @@
       }
       .pdf-viewer {
         margin-top: 20px;
+        position: relative;
+        padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+        height: 0;
+        overflow: hidden;
       }
       .pdf-viewer object {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
-        height: 600px;
+        height: 100%;
         border: none;
       }
       .blog-section {
@@ -56,12 +63,26 @@
         margin-top: 40px;
         border-radius: 0 0 8px 8px;
       }
+      @media (max-width: 768px) {
+        .container {
+          padding: 10px;
+        }
+        .pdf-viewer {
+          padding-bottom: 75%; /* 4:3 Aspect Ratio */
+        }
+      }
     </style>
   </head>
   <body>
     <div class="container">
       <h1>Statistics Table Values</h1>
-      <div class="pdf-viewer" id="pdf-viewer"></div>
+      <div class="pdf-viewer">
+        <object
+          class="pdf"
+          data="statstable.pdf"
+          type="application/pdf"
+        ></object>
+      </div>
       <div class="blog-section">
         <h2>Understanding Statistics Tables</h2>
         <p>
@@ -83,14 +104,8 @@
           tend to be close to the mean, while a high standard deviation
           indicates that the values are spread out over a wider range.
         </p>
-        <object
-          class="pdf"
-          data="statstable.pdf"
-          width="800"
-          height="1000"
-        ></object>
       </div>
     </div>
-    <footer>&copy; 2024 Statistics Inc. All rights reserved.</footer>
+    <footer>&copy;  All rights reserved.</footer>
   </body>
 </html>
